<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">Notes and Stuff</string>
    <string name="edit_text_hint">Type stuff here</string>

    <!--SharedPreferences keys-->
    <string name="pref_key_text_color">pref_key_text_color</string>
    <string name="pref_key_text_size">pref_key_text_size</string>
    <string name="pref_key_background_color">pref_key_background_color</string>
    <string name="pref_key_cursor_position">pref_key_cursor_position</string>

    <!--SharedPreferences defaults-->
    <string name="pref_text_size_default">18</string>
    <string name="pref_text_color_default">#ff000000</string>
    <string name="pref_background_color_default">#ffffffff</string>

    <!--Settings Menu-->
    <string name="settings">Settings</string>

    <!--Pref Titles-->
    <string name="pref_title_text_color">Text Color</string>
    <string name="pref_title_text_size">Text Font Size</string>
    <string name="pref_title_background_color">Background Color</string>

    <!--Pref Descriptions-->
    <string name="pref_summary_text_color">Change the color of the text.</string>
    <string name="pref_summary_text_size">Change the size of the text.</string>
    <string name="pref_summary_background_color">Change the background color behind the text.</string>

    <!--Pref Text Size List-->
    <string-array name="pref_entries_text_size">
        <!--<item android:savedTextSize="10sp">Sample Text</item>-->
        <!--<item android:savedTextSize="12sp">Sample Text</item>-->
        <!--<item android:savedTextSize="14sp">Sample Text</item>-->
        <!--<item android:savedTextSize="16sp">Sample Text</item>-->
        <!--<item android:savedTextSize="18sp">Sample Text</item>-->
        <!--<item android:savedTextSize="22sp">Sample Text</item>-->
        <!--<item android:savedTextSize="28sp">Sample Text</item>-->
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>22</item>
        <item>28</item>
    </string-array>

    <!--Pref Text Size Entries List-->
    <string-array name="pref_entry_values_text_size">
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>22</item>
        <item>28</item>
    </string-array>

    <!--Pref Color List-->
    <string-array name="pref_entries_color">
        <item>Black</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Dark Gray</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Light Gray</item>
        <item>Magenta</item>
        <item>Red</item>
        <item>Transparent</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>

    <!--Pref Color Values List-->
    <string-array name="pref_entry_values_color">
        <!--<item>Black</item>-->
        <item>#ff000000</item>
        <!--<item>Blue</item>-->
        <item>#ff0000ff</item>
        <!--<item>Cyan</item>-->
        <item>#ff00ffff</item>
        <!--<item>Dark Gray</item>-->
        <item>#ff444444</item>
        <!--<item>Gray</item>-->
        <item>#ff888888</item>
        <!--<item>Green</item>-->
        <item>#ff00ff00</item>
        <!--<item>Light Gray</item>-->
        <item>#ffcccccc</item>
        <!--<item>Magenta</item>-->
        <item>#ffff00ff</item>
        <!--<item>Red</item>-->
        <item>#ffff0000</item>
        <!--<item>Transparent</item>-->
        <item>#00000000</item>
        <!--<item>White</item>-->
        <item>#ffffffff</item>
        <!--<item>Yellow</item>-->
        <item>#ffffff00</item>
    </string-array>
</resources>
